k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale-vpn
  labels:
    name: headscale-vpn
